application/brennoflavio/localsend-python/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localsend-python
  namespace: localsend-python
  labels:
    app: localsend-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localsend-python
  template:
    metadata:
      labels:
        app: localsend-python
    spec:
      containers:
      - name: localsend-python
        image: git.brennoflavio.com.br/brennoflavio/localsend-python/docs:522f726
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 48Mi
          requests:
            cpu: 10m
            memory: 48Mi
